# mcp-travel-agent

./: README.md
backend/: Readme.md
backend/servers/event_server/: README.md  event_server.py  main.py  pyproject.toml
backend/servers/event_server/events/: breweries,_food_trucks,_outdoor_markets_Portland, Oregon_weekend_20251016_140759.json  breweries,_food_trucks,_outdoor_markets_Portland, Oregon_weekend_20251016_183107.json  breweries,_food_trucks,_outdoor_markets_Portland, Oregon_weekend_20251016_185333.json  breweries_food_trucks_outdoor_markets_Portland, Oregon_weekend_20251016_184446.json  tech_networking_Tokyo_week_tech_20251016_171019.json  (+1 more)
backend/servers/finance_server/: README.md  finance_search_server.py  finance_server.py  main.py  pyproject.toml
backend/servers/flight_server/: claude_generated_pyproject.toml  env_template_visible.sh  flight_server.py  flights_server_config.json  flights_server_readme.md  flights_server_requirements.txt  main.py  pyproject.toml  uv_flights_server_config.json
backend/servers/geocoder_server/: README.md  geocoder.py  geocoder_server.py  main.py  pyproject.toml
backend/servers/geocoder_server/geocoded_locations/: Tokyo_Station__Tokyo__Japan_20251016_094933.json  Tokyo__Japan_20251016_171019.json
backend/servers/hotel_server/: README.md  hotel_server.py  main.py  pyproject.toml
backend/servers/weather_server/: README.md  WeatherStack_README.md  pyproject.toml  weather_server.py  weatherstack_server.py
frontend/: app.py  config.py  main.py  pyproject.toml  system_prompt.py
(+36 files in other folders)
