[project]
name = "geocoder-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "fastmcp>=2.5.1",
    "geopy>=2.4.1",
    "mcp>=1.9.1",
    "nominatim>=0.1",
    "ratelimiter>=1.2.0.post0",
    "requests>=2.32.3",
]
